1.2
---
Added the ability to load plugins for import and export
Animated gifs can now be exported (via ExportMovie plugin)

1.1
---
Edit easing curve for transition
Font of text objects is now editable
News panel added
Timeline is not limited anymore
Item resizing while shift key pressed centers the item
Playhead can now be repositioned clicking into the new position
Playhead scale has now labels every half a second
Scene or single items can now be exported to XML
Scene and single items can now be imported from XML
PropertyEditor sits now in a scrollarea

Bugfix: now all selected items will be deleted if DEL is pressed
Bugfix: changing Id
Bugfix: changing opacity